--- a/config.toml
+++ b/config.toml
@@ -48,17 +48,17 @@ logo_width = "350px"
 description = "This is meta description"
 author = "Themefisher"
 # contact info
-contact_info = "137 Washington st <br>Dr. Marblehead, <br>MA 01945"
+contact_info = "137 Washington st <br> Marblehead, <br>MA 01945"
 # Preloader
 preloader = true
 # google map
 [params.map]
 enable = true
 gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"
-map_center_lat = "25.773606"
-map_center_lng = "-80.732655"
-map_position_lat = "25.7635916"
-map_position_lng = "-80.1937595"
+map_center_lat = "42.4915"
+map_center_lng = "-70.8578"
+map_position_lat = "42.4915"
+map_position_lng = "-70.8578"
 map_marker = "images/map-marker.png"
 
 # cookies
