--- a/config.toml
+++ b/config.toml
@@ -27,11 +27,6 @@ pre = "#"
 url = "products"
 weight = 3
 
-[[menu.main]]
-name = "Career"
-pre = ""
-url = "career"
-weight = 4
 
 [[menu.main]]
 name = "Contact"
@@ -45,7 +40,7 @@ weight = 5
 logo = "images/logo.png"
 logo_width = "350px"
 # Meta data
-description = "This is meta description"
+description = "Marine Services offered by HarborTech"
 author = "Themefisher"
 # contact info
 contact_info = "137 Washington st <br> Marblehead, <br>MA 01945"
