--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -74,4 +74,4 @@ call_to_action:
   enable : true
   title : "Keep your systems running. <br>Click below to send us an email."
   button_label : "Email a HarborTech"
- 
+  button_link : "careers"
