made changes to more titles

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -47,7 +47,7 @@ product:
   title : "Some Of Our Best Products"
   content : "When you choose Harbortech's rigging products, you can trust that you're getting top-of-the-line gear that combines innovation, performance, and durability. Upgrade your rigging with our soft shackles and running rigging options, and discover a new level of sailing excellence."
   product_item:
-  - title : "Soft Shackles"
+  - title : "Covered Soft Shackles"
     image : "images/product/product-03.jpg"
     content : "These soft shackles are covered with Dyneema® chafe sleeve for extra wear resistance. They are incredibly strong, inexpensive, and absolutely the lightest way to make connections.  Great for halyards, jib sheets, and anything else you can think of."
     project_url : "#"
